--- a/battle.htm
+++ b/battle.htm
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-            <div id="start">
+            <div class="container">
                 <button type="button" onclick="start()">Start</button>
             </div>
             <script language="JavaScript">
